syntax = "proto3";
package voice_controllm;

service VoiceControllm {
  // Control
  rpc StartListening(Empty) returns (Empty);
  rpc StopListening(Empty) returns (Empty);
  rpc Shutdown(Empty) returns (Empty);

  // Query
  rpc GetStatus(Empty) returns (Status);

  // Streaming
  rpc Subscribe(Empty) returns (stream Event);
}

message Empty {}

message Status {
  oneof status {
    Healthy healthy = 1;
    Error error = 2;
  }
}

message Healthy {
  State state = 1;
}

enum State {
  STATE_STOPPED = 0;
  STATE_LISTENING = 1;
  STATE_PAUSED = 2;
}

message Error {
  string message = 1;
}

message Event {
  oneof event {
    StateChange state_change = 1;
    Transcription transcription = 2;
  }
}

message StateChange {
  oneof status {
    State new_state = 1;
    Error error = 2;
  }
}

message Transcription {
  string text = 1;
  double confidence = 2;
}
